rspec-tools/tests/resources/invalid-rules/S101/csharp/rule.adoc
== Why is this an issue?
== How to fix it in Foo Bar Framework
